# cgisf_lib

./: Cargo.toml  LICENSE-MIT  README.md
benches/: compare.rs
src/: ageadjectives.txt  colouradjectives.txt  getstructure.rs  getword.rs  lib.rs  nouns.txt  pluralnouns.txt  singularnouns.txt  words.rs
wordlists/: adverbs.txt  age_adjectives.txt  material_adjectives.txt  nouns.txt  opinion_adjectives.txt  plural_nouns.txt  singular_nouns.txt  size_adjectives.txt  transitive_verbs.txt  verbs.txt
