[package]
name = "cgisf_lib"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A quick and easy sentence generator."
repository = "https://github.com/merelymyself/cgisf_lib"
readme = "README.md"
keywords = ["grammar", "sentence", "generator", "english", "language"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[lib]
name = "cgisf_lib"
crate-type = ["cdylib"]
doc = true
path = "src/lib.rs"
