[package]
name = "cgisf_lib"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A quick and easy sentence generator."
repository = "https://github.com/merelymyself/cgisf_lib"
readme = "README.md"
keywords = ["grammar", "sentence", "generator", "english", "language"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3

[dependencies]
const_format = { version = "0.2.31", features = ["rust_1_64"] }
rand = "0.8.5"

[lib]
name = "cgisf_lib"
crate-type = ["lib"]
doc = true
path = "src/lib.rs"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "compare"
harness = false
